首页布局改版 引用外部字体 首页3种排序方式

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/activity_background</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:typeface">serif</item>
     </style>
 
     <style name="Sqlash" parent="Theme.AppCompat.Light.NoActionBar">
