--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -68,7 +68,7 @@
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/iv_down_close"
-                    android:background="@drawable/download_look"/>
+                    android:background="@drawable/download_pause"/>
 
             </RelativeLayout>
 
