--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/drawload_item"
+        android:id="@+id/search_item"
         app:showAsAction="always"
-        android:icon="@drawable/main_menu_item"
-        android:title="下载" />
+        android:icon="@drawable/ic_search"
+        android:orderInCategory="100"
+        android:title="搜索" />
 </menu>
