--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_200">200dp</dimen>
