--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -20,12 +20,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/splash"/>
+                android:src="@drawable/splash" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#30000000"/>
+                android:background="#30000000" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -37,38 +37,38 @@
                     android:id="@+id/iv_down_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
-                    android:background="@drawable/download_midway"/>
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/download_midway" />
 
                 <TextView
                     android:id="@+id/text_photo_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/iv_down_status"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:textSize="@dimen/text_middle_size"
-                    android:textColor="@color/color_white"
                     android:layout_marginTop="@dimen/dp_4"
-                    android:text="ydEVSavgIpc"/>
+                    android:layout_toRightOf="@id/iv_down_status"
+                    android:text="ydEVSavgIpc"
+                    android:textColor="@color/color_white"
+                    android:textSize="@dimen/text_middle_size" />
 
                 <ImageView
                     android:id="@+id/iv_down_close"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:background="@drawable/download_close"/>
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/download_close" />
 
                 <ImageView
                     android:id="@+id/iv_down_reset_look"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_toLeftOf="@+id/iv_down_close"
-                    android:background="@drawable/download_pause"/>
+                    android:background="@drawable/download_pause" />
 
             </RelativeLayout>
 
