--- a/app/src/main/res/layout/activity_particulars.xml
+++ b/app/src/main/res/layout/activity_particulars.xml
@@ -8,14 +8,14 @@
     tools:context=".ui.particulars.ParticularsActivity">
 
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         android:background="@color/colorPrimary">
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <com.marvin.splashedinkkotlin.widget.ParallaxScrollView
         android:id="@+id/scroll"
