--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -41,7 +41,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/download_midway" />
 
-                <TextView
+                <com.marvin.splashedinkkotlin.widget.ProgressTextView
                     android:id="@+id/text_photo_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
